- Add Privacy Policy place holder - Store date time and version of Terms accepted on account creation
